[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "horai"
version = "0.1.0"
description = "Standalone email mailbox dumper — M365 & IMAP to portable mbox archive"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.10"
authors = [{name = "Mikael Masson"}]
keywords = ["email", "imap", "m365", "backup", "mbox", "archive", "office365"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: System :: Archiving :: Backup",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
]
dependencies = ["msal>=1.20.0"]

[project.scripts]
horai = "horai:main"

[project.urls]
Homepage = "https://github.com/mikaelmasson/horai"
Issues = "https://github.com/mikaelmasson/horai/issues"
